--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -10,6 +10,7 @@ v7d_plot_sound_LDADD = ../graphics/libsim_graphics.la  ../vol7d/libsim_vol7d.la 
 endif
 
 if DBALLE
+if SHAPELIB
 bin_PROGRAMS += v7d_qccli v7d_qcspa v7d_qctem
 
 v7d_qccli_SOURCES = v7d_qccli.f90 
@@ -23,6 +24,7 @@ v7d_qctem_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran
 
 if NCARG
 v7d_qcspa_LDADD += ../graphics/libsim_graphics.la ../termolib/libsim_termolib.la
+endif
 endif
 endif
 
