--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -28,7 +28,11 @@ if DBALLE
 libsim_vol7d_la_SOURCES += vol7d_dballe_class.F90
 AM_FCFLAGS += -I/usr/include/dballe
 libsim_vol7d_la_LIBADD += $(DBALLE_LIBS)
+if F2003_EXTENDED_FEATURES
+libsim_vol7d_la_SOURCES += dballe_class.F03
 endif
+endif
+
 
 if NETCDF
 libsim_vol7d_la_SOURCES += vol7d_netcdf_class.f90
