--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -34,19 +34,27 @@ noinst_HEADERS = arrayof_pre.F90 arrayof_post.F90 array_utilities_inc.F90 arrayo
 
 # c'e` una maniera migliore?
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
-nodist_include_HEADERS = $(tmpvar:.F90=.mod)
+tmpvar1 = $(tmpvar:.f03=.mod)
+tmpvar2 = $(tmpvar1:.F03=.mod)
+nodist_include_HEADERS = $(tmpvar2:.F90=.mod)
 
 missing_values.$(OBJEXT): kinds.$(OBJEXT)
 missing_values.lo: kinds.$(OBJEXT)
 char_utilities.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT)
 char_utilities.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT)
 
-list_integer.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT)
-list_real.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT)
-list_doubleprecison.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT)
-list_character.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT)
-list_byte.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT) kinds.$(OBJEXT)
-list_mix.$(OBJEXT): list_link.$(OBJEXT) list_abstact.$(OBJEXT) kinds.$(OBJEXT)
+list_integer.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_integer.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_real.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_real.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_doubleprecision.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_doubleprecision.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_character.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_character.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT)
+list_byte.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT) kinds.$(OBJEXT)
+list_byte.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT) kinds.$(OBJEXT)
+list_mix.$(OBJEXT): list_link.$(OBJEXT) list_abstract.$(OBJEXT) kinds.$(OBJEXT)
+list_mix.lo: list_link.$(OBJEXT) list_abstract.$(OBJEXT) kinds.$(OBJEXT)
 
 optional_values.$(OBJEXT): missing_values.$(OBJEXT)
 optional_values.lo: missing_values.$(OBJEXT)
