Fix for dba_qcfilter.1
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1349 500a5620-302c-0410-bb8c-d54761bbe776

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -105,7 +105,9 @@ if NCARG
 man_MANS += v7d_plot_sound.1
 endif
 if DBALLE
+if F2003_EXTENDED_FEATURES
 man_MANS += dba_qcfilter.1
+endif
 endif
 
 %.1: %
