file for test in dist
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1358 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -108,7 +108,7 @@ dballe_test_SOURCES = dballe_test.F03
 dballe_test_LDADD = libsim_vol7d.la
 dist_check_SCRIPTS += dballe_test.sh
 # for tests/examples
-EXTRA_DIST += dballe_test.dat
+EXTRA_DIST += dballe_test_copy1fmem.test  dballe_test_copy1f.test
 
 
 endif
