working on vol7d/vol7d_dballenew_class
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1368 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -30,6 +30,7 @@ AM_FCFLAGS += -I/usr/include/dballe
 libsim_vol7d_la_LIBADD += $(DBALLE_LIBS)
 if F2003_EXTENDED_FEATURES
 libsim_vol7d_la_SOURCES += dballe_class.F03
+libsim_vol7d_la_SOURCES += vol7d_dballenew_class.F03
 endif
 endif
 
