v7d_qc* forced to use old dballe interface, modqc now have default private
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1400 500a5620-302c-0410-bb8c-d54761bbe776

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -1,4 +1,4 @@
-AM_FCFLAGS = -I../base -I../grib -I../volgrid6d -I../vol7d -I../qc -I../termolib -I../log4fortran  -I../graphics -I../alchimia
+AM_FCFLAGS = -I../base -I../volgrid6d -I../vol7d -I../qc -I../termolib -I../log4fortran  -I../graphics -I../alchimia
 #EXTRA_DIST = log4crc
 bin_PROGRAMS =
 
