in F20 some issues with netcdf include path
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1401 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -211,7 +211,7 @@ if test "x$enableval" = "xyes"; then
   fi
   AC_MSG_RESULT([vapor code included])
   AC_DEFINE(VAPOR, 1, [Enable vapor code])
-  VAPOR_CPPFLAGS="-I/usr/include/vapor -I/usr/include/netcdf"
+  VAPOR_CPPFLAGS="-I/usr/include/vapor"
   AC_SUBST(VAPOR_CPPFLAGS)
   VAPOR_LIBS="-lvdf -lcommon -lnetcdf -lexpat -lproj -lrt -lstdc++"
   AC_SUBST(VAPOR_LIBS)
