--- a/configure.ac
+++ b/configure.ac
@@ -33,7 +33,7 @@ AC_ARG_ENABLE(examples, AC_HELP_STRING([--enable-examples],
 AM_CONDITIONAL(EXAMPLES, test "x$enableval" = "xyes")
 
 AC_ARG_ENABLE(f2003-features, AC_HELP_STRING([--enable-f2003-features],
-  [enable some F2003 features (gfortran 4.6)]), , [enableval=no])dnl default disable
+  [enable some F2003 features (gfortran 4.6)]), , [enableval=yes])dnl default enable
 if test "x$enableval" = "xyes"; then
    AC_DEFINE(F2003_FEATURES, 1, [Enable some F2003 features (gfortran 4.6)])
 fi
@@ -42,7 +42,7 @@ AM_CONDITIONAL(F2003_FEATURES, test "x$enableval" = "xyes")
 MY_F2003_FEATURES=$enableval
 
 AC_ARG_ENABLE(f2003-extended-features, AC_HELP_STRING([--enable-f2003-extended-features],
-  [enable extended F2003 features (gfortran 4.8)]), , [enableval=no])dnl default disable
+  [enable extended F2003 features (gfortran 4.8)]), , [enableval=yes])dnl default disable
 if test "x$enableval" = "xyes"; then
   AC_DEFINE(F2003_EXTENDED_FEATURES, 1, [Enable major part of F2003 features (gfortran 4.8)])
 fi
