adapted dba_qcfilter and dba_transform
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1452 500a5620-302c-0410-bb8c-d54761bbe776

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -110,7 +110,7 @@ man_MANS += v7d_plot_sound.1
 endif
 if DBALLE
 if F2003_EXTENDED_FEATURES
-man_MANS += dba_qcfilter.1
+man_MANS += dba_qcfilter.1 dba_transform.1
 endif
 endif
 
