work in progress migration to new dballef03 api
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1472 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -36,7 +36,7 @@ if F2003_EXTENDED_FEATURES
 libsim_vol7d_la_SOURCES += dballe_class.F03
 libsim_vol7d_la_SOURCES += vol7d_serialize_dballe_class.F03
 libsim_vol7d_la_SOURCES += vol7d_dballe_class.F03
-libsim_vol7d_la_SOURCES += vol7d_dballeold_class.F90
+#libsim_vol7d_la_SOURCES += vol7d_dballeold_class.F90
 endif
 endif
 
@@ -91,14 +91,14 @@ vol7d_oraclesim_class.lo: vol7d_class.$(OBJEXT) vol7d_oraclesim_class_vartable.F
 endif
 
 if DBALLE
-vol7d_dballeold_class.$(OBJEXT): vol7d_class.$(OBJEXT) \
-vol7d_dballe_class_nana.F90 vol7d_dballe_class_ndati.F90 \
-vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
-vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 vol7d_dballe_class_var_du.F90
-vol7d_dballeold_class.lo: vol7d_class.$(OBJEXT) \
-vol7d_dballe_class_nana.F90 vol7d_dballe_class_ndati.F90 \
-vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
-vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90  vol7d_dballe_class_var_du.F90
+#vol7d_dballeold_class.$(OBJEXT): vol7d_class.$(OBJEXT) \
+#vol7d_dballe_class_nana.F90 vol7d_dballe_class_ndati.F90 \
+#vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
+#vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 vol7d_dballe_class_var_du.F90
+#vol7d_dballeold_class.lo: vol7d_class.$(OBJEXT) \
+#vol7d_dballe_class_nana.F90 vol7d_dballe_class_ndati.F90 \
+#vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
+#vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90  vol7d_dballe_class_var_du.F90
 
 vol7d_dballe_class.$(OBJEXT): vol7d_class.$(OBJEXT) \
 vol7d_dballe_class_var_du.F90
