--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -22,8 +22,7 @@ dba_transform_LDADD =  ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 endif
 
 if SHAPELIB
-#bin_PROGRAMS += v7d_qccli v7d_qctem
-bin_PROGRAMS += v7d_qccli
+bin_PROGRAMS += v7d_qccli v7d_qctem
 
 v7d_qccli_SOURCES = v7d_qccli.F90 
 v7d_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
@@ -34,7 +33,7 @@ v7d_qctem_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran
 if NCARG
 # v7d_qcspa is now here because it requires modqcspa
 # which requires NCAR for triangulations
-#bin_PROGRAMS += v7d_qcspa
+bin_PROGRAMS += v7d_qcspa
 
 v7d_qcspa_SOURCES = v7d_qcspa.F90 
 v7d_qcspa_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
