Fixes and markdown with new text

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix AUTHORS
+EXTRA_DIST = fedora/libsim.spec portability/conv_cpp.sh portability/README_aix AUTHORS
 
 # Execute make in subdirs
 SUBDIRS = log4fortran base alchimia vol7d volgrid6d data qc termolib graphics bin examples doc
