install correctly pkg-config file, including rpm closes #6

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,3 +5,5 @@ EXTRA_DIST = fedora/libsim.spec portability/conv_cpp.sh portability/README_aix A
 # Execute make in subdirs
 SUBDIRS = log4fortran base alchimia vol7d volgrid6d data qc termolib graphics bin examples doc
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libsim.pc
