--- a/libsim.pc.in
+++ b/libsim.pc.in
@@ -10,6 +10,6 @@ Description: General-purpose and Earth-Science fortran library
 URL: https://github.com/ARPA-SIMC/libsim
 Version: @VERSION@
 Requires:
-Requires.private:
+Requires.private: libdballef
 Libs: -L${libdir} -lsim_volgrid6d -lsim_vol7d -lsim_termolib -lsim_alchimia -lsim_base -llog4fortran
 Cflags: -I${libdir}/@FC@/modules
