--- a/libsim.pc.in
+++ b/libsim.pc.in
@@ -12,5 +12,5 @@ Version: @VERSION@
 Requires:
 Requires.private: log4c gdal libdballef grib_api_f90 netcdf-fortran
 Libs: -L${libdir} -lsim_volgrid6d -lsim_vol7d -lsim_termolib -lsim_alchimia -lsim_base -llog4fortran
-Libs.private: -lcnf -locci -lfortrangis -lshp -lngmath -lncarg -lncarg_gks -lncarg_c -lX11 -lpng -lcairo
+Libs.private: -lcnf @ORA_LIBS@ @VAPOR_LIBS@ @SHAPELIB_LIBS@ @NGMATH_LIBS@ @NCARG_LIBS@
 Cflags: -I${libdir}/@FC@/modules
