add test for dballe attributes

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -106,9 +106,12 @@ vol7d_dballe_class.lo: vol7d_class.$(OBJEXT) \
 vol7d_dballe_class_var_du.F90
 
 if F2003_EXTENDED_FEATURES
-check_PROGRAMS += dballe_test
+check_PROGRAMS += dballe_test 
+check_PROGRAMS += dballe_test2
 dballe_test_SOURCES = dballe_test.F03
+dballe_test2_SOURCES = dballe_test2.F03
 dballe_test_LDADD = libsim_vol7d.la
+dballe_test2_LDADD = libsim_vol7d.la
 dist_check_SCRIPTS += dballe_test.sh
 endif
 endif
