--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -105,6 +105,11 @@ vol7d_dballe_class_var_du.F90
 vol7d_dballe_class.lo: vol7d_class.$(OBJEXT) \
 vol7d_dballe_class_var_du.F90
 
+check_PROGRAMS += vol7d_dballe_test 
+vol7d_dballe_test_SOURCES = vol7d_dballe_test.F90
+vol7d_dballe_test_LDADD = libsim_vol7d.la
+dist_check_SCRIPTS += vol7d_dballe_test.sh
+
 if F2003_EXTENDED_FEATURES
 check_PROGRAMS += dballe_test 
 check_PROGRAMS += dballe_test2
@@ -125,7 +130,7 @@ AM_FCFLAGS += -I../alchimia
 libsim_vol7d_la_LIBADD += ../alchimia/libsim_alchimia.la
 endif
 
-EXTRA_DIST += dballe_test_copy1fmem.test  dballe_test_copy1f.test
+EXTRA_DIST += dballe_test_copy1fmem.test  dballe_test_copy1f.test vol7d_dballe_test.bufr
 
 if NETCDF
 vol7d_netcdf_class.$(OBJEXT): vol7d_class.$(OBJEXT)
