--- a/libsim.pc.in
+++ b/libsim.pc.in
@@ -10,7 +10,7 @@ Description: General-purpose and Earth-Science fortran library
 URL: https://github.com/ARPA-SIMC/libsim
 Version: @VERSION@
 Requires:
-Requires.private: log4c gdal libdballef grib_api_f90 netcdf-fortran
+Requires.private: log4c gdal libdballef @GRIBAPI_PKGCONFIG@ netcdf-fortran
 Libs: -L${libdir} -lsim_volgrid6d -lsim_vol7d -lsim_termolib -lsim_alchimia -lsim_base -llog4fortran
 Libs.private: -lcnf @ORA_LIBS@ @VAPOR_LIBS@ @SHAPELIB_LIBS@ @NGMATH_LIBS@ @NCARG_LIBS@
 Cflags: -I${libdir}/@FC@/modules
